--- a/.env
+++ b/.env
@@ -17,3 +17,22 @@ NEO4J_DATABASE=neo4j
 # for this to work, would be better to first save a bunch of questions in the database
 # use higher threshold in the beggining and later reduce to 0.8
 NEO4J_VECTOR_THRESHOLD=0.9
+
+
+
+# PostgreSQL Config
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=localhost
+POSTGRES_DB=restaurant
+POSTGRES_PORT=5432
+
+# Auth Config
+JWT_SECRET=your-super-secret-jwt-token-with-at-least-32-characters
+JWT_EXPIRES_IN=24h
+GOTRUE_URL=http://localhost:9999
+
+# Server Config
+PORT=3002
+DEBUG_ENABLED=true
+CORS_ORIGIN=http://localhost:5173
