--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   neo4j:
     image: neo4j:5.14.0-community
@@ -32,6 +34,33 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=restaurant
+
+  # Supabase Auth (GoTrue)
+  auth:
+    image: supabase/gotrue:v2.33.0  # use a specific version available on Docker Hub
+    container_name: supabase-auth
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    environment:
+      - GOTRUE_API_HOST=0.0.0.0
+      - GOTRUE_API_PORT=9999
+      - API_EXTERNAL_URL=http://localhost:9999
+      - GOTRUE_DB_DRIVER=postgres
+      - GOTRUE_DB_DATABASE_URL=postgres://postgres:postgres@postgres:5432/restaurant?sslmode=disable&options=--search_path=auth,public
+      - GOTRUE_SITE_URL=http://localhost:5173
+      - GOTRUE_URI_ALLOW_LIST=http://localhost:5173,http://localhost:3002
+      - GOTRUE_DISABLE_SIGNUP=false
+      - GOTRUE_JWT_SECRET=your-super-secret-jwt-token-with-at-least-32-characters
+      - GOTRUE_JWT_EXP=3600
+      - GOTRUE_JWT_DEFAULT_GROUP_NAME=authenticated
+      - GOTRUE_EXTERNAL_EMAIL_ENABLED=false
+      - GOTRUE_MAILER_AUTOCONFIRM=true
+      - GOTRUE_LOG_LEVEL=debug
+      - GOTRUE_OPERATOR_TOKEN=super-secret-operator-token
+    ports:
+      - "9999:9999"
+
 
 volumes:
   postgres-data:
