--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "restaurant-assistant",
+  "name": "restaurant-assistant-backend",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "dev": "node --env-file .env --watch src/index.js",
     "seed": "node --env-file .env --watch data/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +22,12 @@
     "@langchain/google-genai": "^0.1.8",
     "@langchain/ollama": "^0.1.5",
     "@langchain/openai": "^0.4.2",
+    "@supabase/supabase-js": "^2.38.4",
+    "axios": "^1.6.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "neo4j-driver": "^5.28.0",
     "pg": "^8.11.3"
   },
